--- a/BlackJackGame_project/BlackJackGame_project.vcxproj.filters
+++ b/BlackJackGame_project/BlackJackGame_project.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="PLAYER.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="BlackJack.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PLAYER.h">
@@ -33,6 +36,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="CommonDec.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="BlackJack.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
